--- a/sudoku_solver/sudoku_solver_app/templates/sudoku_solver_app/sudoku_input_form.html
+++ b/sudoku_solver/sudoku_solver_app/templates/sudoku_solver_app/sudoku_input_form.html
@@ -1,14 +1,16 @@
 {% extends 'sudoku_solver_app/base.html' %}
+{% load sudoku_solver_app_extras %}
 
 {% block content %}
     <div class="container">
-        <table id="sudoku" class="table table-bordered">
+        <table id="sudoku" class="">
             {% for row in sudoku %}
                 <tr>
                     {% for col in  row %}
-                        <td style="height: 50px; width: 50px;">
+                        {% get_sudoku_box sudoku forloop.parentloop.counter0 forloop.counter0 as current_box %}
+                        <td>
                             {% if col != 0 %}
-                                {{ col }}
+                                {{ current_box }}
                             {% endif %}
                         </td>
                     {% endfor %}
