--- a/sudoku_solver/sudoku_solver_app/templates/sudoku_solver_app/sudoku_input_form.html
+++ b/sudoku_solver/sudoku_solver_app/templates/sudoku_solver_app/sudoku_input_form.html
@@ -1,5 +1,6 @@
 {% extends 'sudoku_solver_app/base.html' %}
 {% load sudoku_solver_app_extras %}
+{% load static %}
 
 {% block content %}
     <div class="container">
@@ -20,8 +21,14 @@
 
         <form action="{% url 'sudoku_solver_app:index' %}" method="post">
             {% csrf_token %}
-            <input style="display: none" type="text" value="{{ sudoku_txt }}" name="sudoku">
+{#            <input id="sudoku_txt_value" style="display: none" type="text" value="{{ sudoku_txt }}" name="sudoku">#}
+            <input id="sudoku_txt_value" type="text" value="" name="sudoku">
              <button id="btn-solve" type="submit" class="btn btn-dark">Solve</button>
         </form>
     </div>
+{% endblock %}
+
+{% block javascripts %}
+    {{ block.super }}
+    <script src="{% static 'sudoku_solver_app/js/sudoku.js' %}"></script>
 {% endblock %}
