--- a/sudoku_solver/sudoku_solver_app/templates/sudoku_solver_app/base.html
+++ b/sudoku_solver/sudoku_solver_app/templates/sudoku_solver_app/base.html
@@ -24,8 +24,10 @@
   <span class="navbar-brand mb-0 h1">Sudoku Solver</span>
 </nav>
 
-{% block content %}
-{% endblock %}
+<div class="container">
+  {% block content %}
+  {% endblock %}
+</div>
 
 
 {#<!-- Optional JavaScript -->#}
