--- a/sudoku_solver/sudoku_solver_app/static/sudoku_solver_app/css/style.css
+++ b/sudoku_solver/sudoku_solver_app/static/sudoku_solver_app/css/style.css
@@ -31,8 +31,8 @@
     font-weight: bold;
 }
 #sudoku .selected-box {
-    background-color: lightblue;
+    background-color: lightblue !important;
 }
 #sudoku .error-box {
-    background-color: lightcoral;
+    background-color: #f8d7da;
 }
