change how the error message appears, now it is created/destroyed each time

--- a/sudoku_solver/sudoku_solver_app/templates/sudoku_solver_app/sudoku_input_form.html
+++ b/sudoku_solver/sudoku_solver_app/templates/sudoku_solver_app/sudoku_input_form.html
@@ -19,9 +19,7 @@
         </form>
     </div>
       
-    <div id="error_message" class="alert alert-danger" role="alert">
-        The sudoku is not correct !
-    </div>
+    <div id="error_message"></div>
 
     <table id="sudoku" class="">
         {% for row in sudoku %}
