set a small size for the sudoku for small devices

--- a/sudoku_solver/sudoku_solver_app/static/sudoku_solver_app/css/sudoku.css
+++ b/sudoku_solver/sudoku_solver_app/static/sudoku_solver_app/css/sudoku.css
@@ -2,9 +2,16 @@
     sudoku box
 */
 #sudoku td {
-    height: 50px;
-    width: 50px;
+    height: 30px;
+    width: 30px;
     text-align: center;
+}
+
+@media only screen and (min-width: 768px) {
+    #sudoku td {
+        height: 50px;
+        width: 50px;
+    }
 }
 
 /* 
